@@ -56,6 +56,7 @@ CLI Changes
    of all running mixmonitors on a channel.
  * The debuglevel of "pri set debug" is now a bitmask ranging from 0 to 15 if
    numeric instead of 0, 1, or 2.
+ * "stun show status" will show a table describing how the STUN client is behaving.
 
 ConfBridge
 -------------------
